Add last row images

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
       <img class="fifth-row" src="./assets/family_dinner.jpeg" alt="gang's all here"/>
       <img class="fifth-row" src="./assets/ben_ron_beards.png" alt="l'chiem"/>
     </div>
-    <h1>We Love You!</h1>
+    <div>
+      <img class="last-row" src="./assets/farm_fam.jpg" alt="sam fam farm bow"/>
+      <img class="last-row" src="./assets/fam_farm_rainbow.jpg" alt="double rainbow"/>
+    </div>
   </body>
 </html>
